# retrofitting-recurrence

./: .gitignore  CLAUDE.md  LORA_DISTILLATION.md  OVERVIEW.md  README.md  ellisadam.py  generate.py  mix_datasets.py  multi_recurence_eval.py  param_counter.py  plot_evals.py  preprocess_data_packing.py  pyproject.toml  requirements.txt  stateful_parquet_dataset.py  train.py
.claude/skills/read-arxiv-paper/: SKILL.md
convert_pretrained_model/: __init__.py  common.py  convert_llama.py  convert_olmo.py  convert_olmo_loop_in_place.py  looped_llama.py  looped_olmo.py  raven_config_minimal.py  raven_modeling_minimal_compare_llama.py  raven_modeling_minimal_compare_olmo.py  raven_modeling_minimal_llama.py  raven_modeling_minimal_olmo.py  raven_modeling_minimal_with_qk_norm.py
dev/: layer_analysis.py
paper_plots/: plot.py  pull_from_wandb.py  scheduling_options.py
shells/: _machine_config.sh  _machine_config.sh.example  _submit.sh  eval.sh  generate.sh  llama.sh  machine_config.sh.example  olmo.sh  olmo_adapter_only.sh  olmo_loop_in_place.sh  tinyllama.sh
shells/preprocess/: convert_olmo.sh  download_ds_cpu.sh  preprocess_data_packing_cpu.sh
utils/: download_ds.py  download_to_local.py  to_parquet.py  untie_embeds_hf.py
